test/errors/type/table/tostr.yasl
mt.lookup({}, .tostr)(1, true)
